# OAiP

./: README.md
##Dop/: CMakeLists.txt  main.cpp
Graphics/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp
Graphics/images/Polina/: 1.heic  10.heic  11.heic  12.heic  13.heic  14.heic  15.heic  2.heic  3.heic  4.heic  5.heic  6.heic  7.heic  8.heic  9.heic
lab1/: CMakeLists.txt  basis.cpp  basis.h  filing.cpp  main.cpp  students.base  test.txt
lab2/: CMakeLists.txt  main.cpp  stack.cpp  stack.h  students.base
lab3/: CMakeLists.txt  basis.cpp  basis.h  main.cpp  store.base  task.txt
lab8/: CMakeLists.txt  main.cpp
lab_with_stack/: CMakeLists.txt  main.cpp
